remove JavaModuleUtils